<resources>
    <string name="app_name">NurseryManagementSystem</string>
    <string name="nms">Nursery Management System</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="login_username">Username or Email </string>
    <string name="name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="phone">Contact Number</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm Password</string>
    <string name="start">Get Started</string>
    <string name="no_acc">No Account?</string>
    <string name="al_acc">Already Account?</string>
    <string name="add_flower">Add Flower</string>
    <string name="add_fruit">Add Fruit</string>
    <string name="add_forest">Add Forest</string>
    <string name="add_veg">Add Vegetable</string>
    <string name="signup_head">Create New Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>