<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nursery8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@color/dark" />
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        android:textStyle="bold" />
     <EditText
         android:layout_below="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/input_field"
        android:padding="10sp"
        android:hint="@string/login_username"
        android:singleLine="true"
        android:textColorHint="@color/hint"
        android:textColor="@color/text"
        android:id="@+id/login_username"
        android:importantForAutofill="no" />
    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_username"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/input_field"
        android:padding="10sp"
        android:singleLine="true"
        android:hint="@string/password"
        android:textColorHint="@color/hint"
        android:textColor="@color/text"
        android:id="@+id/login_password"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="@color/dark" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/no_acc"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@+id/login_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:layout_toEndOf="@+id/textview"
        android:background="@drawable/small_button"
        android:text="@string/signup"
        android:textColor="@color/text"
        android:textSize="10sp" />

</RelativeLayout>